# PythonProjectJob

./: .gitignore  README.md  pyproject.toml
src/: Decorator.py  ListIntersection.py  List_of_exceptions.py  Proba.py  calculate_tax.py  list_movie.py  list_unique.py  open_file_names.py  palindrome.py  praktika.py  sort.py
tests/: test_calculate_taxes.py  test_decorator.py  test_list_movie.py  test_list_of_exceptions.py  test_movie.py
